--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1,3 +1,7 @@
+@font-face {
+  font-family: LaSpacinoLite-Regular;
+  src: url(../fonts/LaSpacinoLite-Regular.otf) format("opentype"); }
+
 * {
   margin: 0;
   padding: 0; }
@@ -10,15 +14,36 @@ body {
   height: 85vh;
   text-align: center;
   background-image: linear-gradient(90deg, #34495e 25%, #f34235 100%); }
+  @media only screen and (max-width: 480px) {
+    .logo {
+      height: 50vh; } }
+  @media only screen and (min-width: 481px) and (max-width: 1024px) {
+    .logo {
+      height: 70vh; } }
   .logo__h1, .logo__description, .tabMenu p {
+    top: 120px;
     margin: 0;
-    font-size: 50px;
+    font-size: 200px;
     position: relative;
-    top: 120px; }
+    font-family: Arial; }
+    @media only screen and (max-width: 480px) {
+      .logo__h1, .logo__description, .tabMenu p {
+        font-size: 70px;
+        top: 120px; } }
+    @media only screen and (min-width: 481px) and (max-width: 1024px) {
+      .logo__h1, .logo__description, .tabMenu p {
+        font-size: 100px;
+        top: 120px; } }
   .logo__description {
     font-size: 21px;
-    margin-top: 60px;
-    letter-spacing: 3px; }
+    letter-spacing: 2px;
+    font-weight: 100; }
+    @media only screen and (max-width: 480px) {
+      .logo__description {
+        font-size: 12px; } }
+    @media only screen and (min-width: 481px) and (max-width: 1024px) {
+      .logo__description {
+        font-size: 18px; } }
 
 .tabMenu {
   height: 16vh;
@@ -48,49 +73,84 @@ body {
   border-radius: 8px;
   box-shadow: 0px 1px 1px 0px rgba(0, 0, 102, 0.1);
   margin-bottom: 25px;
-  padding: 10px; }
+  padding: 10px;
+  border: 1px solid #cddbee; }
+  @media only screen and (min-width: 481px) and (max-width: 1024px) {
+    .clipCard {
+      min-height: 450px; } }
   .clipCard__h2 {
     font-weight: 400;
-    color: #ca443e; }
+    color: #FF7777;
+    margin-bottom: 20px; }
     @media only screen and (max-width: 480px) {
       .clipCard__h2 {
         font-size: 18px; } }
     @media only screen and (min-width: 481px) and (max-width: 1024px) {
       .clipCard__h2 {
-        font-size: 22px; } }
+        font-size: 14px;
+        margin-bottom: 40px; } }
     @media only screen and (min-width: 1025px) {
       .clipCard__h2 {
         font-size: 18px; } }
   .clipCard iframe {
     width: 100%;
     height: 300px;
-    margin-bottom: 10px; }
+    margin-bottom: 15px; }
 
 .videoUI {
   background-color: #fff;
-  height: 80px;
   width: 100%; }
-  .videoUI__like {
+  .videoUI__like, .videoUI__comment, .videoUI__saw, .videoUI__share {
     position: relative;
     border-radius: 8px;
     display: inline-block;
     border: 1px solid #cddbee;
-    padding: 5px 10px 5px 35px;
+    padding: 5px 5px 5px 25px;
     color: #799999;
     box-shadow: 0px 1px 1px 0px rgba(0, 0, 102, 0.1);
     cursor: pointer;
-    transition: all 0.2s; }
-    .videoUI__like:hover {
+    margin-right: 12px;
+    transition: all 0.3s; }
+    @media only screen and (min-width: 481px) and (max-width: 1024px) {
+      .videoUI__like, .videoUI__comment, .videoUI__saw, .videoUI__share {
+        padding: 3px 5px 3px 25px;
+        margin-right: 6px;
+        font-size: 12px; } }
+    @media only screen and (max-width: 480px) {
+      .videoUI__like, .videoUI__comment, .videoUI__saw, .videoUI__share {
+        margin-right: 9px; } }
+    .videoUI__like:hover, .videoUI__comment:hover, .videoUI__saw:hover, .videoUI__share:hover {
       box-shadow: none;
-      background-color: #E8F1F5; }
-    .videoUI__like::before {
-      content: '';
+      background-color: #E8F1F5;
+      color: #34495e; }
+      .videoUI__like:hover::before, .videoUI__comment:hover::before, .videoUI__saw:hover::before, .videoUI__share:hover::before {
+        color: #34495e;
+        transition: all 0.3s; }
+    .videoUI__like::before, .videoUI__comment::before, .videoUI__saw::before, .videoUI__share::before {
+      color: #799999;
+      font-size: 16px;
+      font-family: FontAwesome;
+      content: "\f004";
       position: absolute;
-      width: 20px;
-      height: 20px;
-      background-image: url("../img/videoUI__like.png");
-      background-repeat: no-repeat;
-      background-size: 16px 16px; }
+      left: 3px;
+      top: 3px; }
+      @media only screen and (min-width: 481px) and (max-width: 1024px) {
+        .videoUI__like::before, .videoUI__comment::before, .videoUI__saw::before, .videoUI__share::before {
+          left: 9px;
+          font-size: 12px; } }
+  .videoUI__comment, .videoUI__saw {
+    border: none;
+    cursor: default;
+    box-shadow: none; }
+    .videoUI__comment:hover, .videoUI__saw:hover {
+      background-color: transparent;
+      color: #34495e; }
+    .videoUI__comment::before, .videoUI__saw::before {
+      content: "\f27a"; }
+  .videoUI__saw::before {
+    content: "\f06e "; }
+  .videoUI__share::before {
+    content: "\f1e0"; }
 
 @media only screen and (min-width: 481px) and (max-width: 1024px) {
   .col-md-4 {
